The journey of a thousand miles begins with a single step